--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header {
+background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20'%3E%3Cpath d='M6.25 2.4h6.557l3.643 3.735V15.1H6.25V2.4zm1.456 1.493v9.712h7.286V6.883h-2.913v-2.99H7.706zM3.5 17.7V5.5l1.554.018v10.741H13.7V17.7H3.5z'/%3E%3C/svg%3E");
+  align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 48px;
+  left: 0;
+  min-width: 550px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  .header--static {
+    position: static;
+    width: auto;
+  }
+
+  .header__logo {
+    display: inline-block;
+    padding: 0 20px
+  }
+
+  .header__logo:focus {
+      outline: none;
+    }
+
+  .header__logo svg {
+      display: block;
+    }
